--- a/css/app.css
+++ b/css/app.css
@@ -31,4 +31,269 @@ ul {
   list-style: none;
 }
 
+.header {
+  background-color: #15161d;
+}
+.header-top {
+  background-color: #1e1f29;
+  color: #fff;
+}
+.header-top-container {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8rem 0;
+}
+.header-top span {
+  margin-right: 1rem;
+}
+.header-top i {
+  margin-right: 0.3rem;
+}
+.header-top a {
+  color: #fff;
+}
+
+.main-header-container {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.3rem 0;
+}
+.main-header-container a, .main-header-container span, .main-header-container i {
+  color: #fff;
+}
+.main-header-container #brand {
+  font-weight: 900;
+  font-size: 3rem;
+}
+.main-header-container #brand i {
+  color: #d10024;
+  font-size: 2rem;
+}
+.main-header-container #search-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+}
+.main-header-container #search-form input {
+  height: 40px;
+}
+.main-header-container #search-form #search {
+  width: 60%;
+  height: 40px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding-left: 25px;
+}
+.main-header-container .header-actions-menu {
+  display: flex;
+  align-items: center;
+}
+.main-header-container .header-actions-menu .wishlist-container, .main-header-container .header-actions-menu .wishlist-cart-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-left: 2.5rem;
+}
+.main-header-container .header-actions-menu .wishlist-container .qty, .main-header-container .header-actions-menu .wishlist-cart-container .qty {
+  position: absolute;
+  top: -10px;
+  right: 2px;
+  background-color: #d10024;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-header-container .header-actions-menu .wishlist-container i, .main-header-container .header-actions-menu .wishlist-cart-container i {
+  margin-bottom: 0.2rem;
+}
+.main-header-container .header-actions-menu .wishlist-container a:hover, .main-header-container .header-actions-menu .wishlist-cart-container a:hover {
+  color: #d10024;
+}
+
+.header-bottom {
+  background-color: #fff;
+  border-bottom: 2px solid #e4e7ed;
+  border-top: 3px solid #d10024;
+}
+.header-bottom ul {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  justify-content: left;
+  padding: 1rem 0;
+}
+.header-bottom li {
+  margin-right: 1.3rem;
+}
+.header-bottom li a {
+  color: #2b2d42;
+  border-bottom: 2px solid transparent;
+}
+.header-bottom li a:hover {
+  color: #d10024;
+  border-color: #d10024;
+}
+
+.banners {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 3rem 0;
+}
+
+.products-grid {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 2rem 0;
+}
+.products-grid h2 {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.products-grid-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 0;
+}
+
+.btn {
+  padding: 8px 15px;
+  height: 40px;
+  color: #fff;
+  border-radius: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: #d10024;
+  cursor: pointer;
+  outline: none;
+  border: 2px solid #d10024;
+  transition: 0.3s;
+}
+.btn:hover {
+  background-color: #fff;
+  color: #d10024;
+}
+.btn-half {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  text-transform: none;
+}
+
+.banner {
+  width: 30%;
+  height: 200px;
+  position: relative;
+  color: #fff;
+  transition: 0.3s;
+  background-position: center;
+  background-size: cover;
+  background-size: 100%;
+}
+.banner:hover {
+  background-size: 120%;
+}
+.banner-cover {
+  background-color: #d10024;
+  width: 70%;
+  height: 100%;
+  opacity: 0.8;
+  border-bottom-right-radius: 6rem;
+}
+.banner-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2rem;
+}
+.banner-content h2 {
+  font-size: 2.1rem;
+  margin-bottom: 1rem;
+  max-width: 70%;
+}
+.banner-content a {
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+.banner-content i {
+  color: #fff;
+  margin-left: 0.8rem;
+}
+
+#banner-1 {
+  background-image: url("../../img/banner-1.jpg");
+}
+
+#banner-2 {
+  background-image: url("../../img/banner-2.jpg");
+}
+
+#banner-3 {
+  background-image: url("../../img/banner-3.jpg");
+}
+
+.products-grid-card {
+  border: 1px solid #b9babc;
+  position: relative;
+  width: 20%;
+  padding: 1rem;
+  transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.products-grid-card:hover {
+  border-color: #d10024;
+}
+.products-grid-card .label {
+  text-transform: uppercase;
+  border: 1px solid #d10024;
+  color: #d10024;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  padding: 2px 6px;
+}
+.products-grid-card .new {
+  background-color: #d10024;
+  color: #fff;
+}
+.products-grid-card img {
+  width: 100%;
+}
+.products-grid-card .category, .products-grid-card .product-name, .products-grid-card .product-price, .products-grid-card .rating-box, .products-grid-card .btn {
+  margin-bottom: 1rem;
+}
+.products-grid-card .category {
+  margin-top: 1rem;
+  text-transform: uppercase;
+  color: #b9babc;
+}
+.products-grid-card .product-name {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+.products-grid-card .product-price {
+  color: #d10024;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=app.css.map */
