--- a/sass/1-base/_variables.sass
+++ b/sass/1-base/_variables.sass
@@ -1,7 +1,7 @@
 $primary-color: #d10024
 $light-color:#fff
 $dark-color: #333
-$grey-text-color: #b9babc
+$gray-text-color: #b9babc
 $bg-color: #15161d
 $secondary-bg-color: #1e1f29
 $section-bg-color: #e4e7ed
