Só falta o responsivo

--- a/css/app.css
+++ b/css/app.css
@@ -180,6 +180,151 @@ ul {
   height: 400px;
   padding: 2rem;
 }
+.deal-container-content {
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  justify-content: center;
+}
+.deal-container-content-timer {
+  display: flex;
+  margin-bottom: 2rem;
+}
+.deal-container-content .deal-container-timer {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #d10024;
+  color: #fff;
+  margin: 0 1rem;
+}
+.deal-container-content .deal-container-timer-time {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.deal-container-content-title, .deal-container-content-subtitle {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+.deal-container-content-subtitle {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+}
+
+.newslatter-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  border-top: 2px solid #e4e7ed;
+}
+.newslatter-container h2 {
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 2rem;
+}
+.newslatter-container h2 span {
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.newslatter-container form {
+  display: flex;
+  margin-bottom: 3rem;
+}
+.newslatter-container form input[type=email] {
+  border: 1px solid #e4e7ed;
+  height: 40px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding-left: 25px;
+}
+.newslatter-container .social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.newslatter-container .social-media i {
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  margin: 5px;
+  border: 1px solid #e4e7ed;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #333;
+  transition: 0.3s;
+}
+.newslatter-container .social-media i:hover {
+  color: #d10024;
+  background-color: #e4e7ed;
+}
+
+.footer {
+  background-color: #15161d;
+  padding: 3rem 0;
+}
+.footer a, .footer p {
+  color: #b9babc;
+}
+.footer li, .footer p {
+  margin-bottom: 1rem;
+}
+.footer li a:hover, .footer p a:hover {
+  color: #d10024;
+}
+.footer li i, .footer p i {
+  margin-right: 0.3rem;
+}
+.footer h3 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.75rem;
+  margin-bottom: 1.5rem;
+}
+.footer-top {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 3rem;
+}
+.footer-top-about, .footer-top-category, .footer-top-information, .footer-top-menu {
+  max-width: 25%;
+}
+.footer-bottom {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-bottom-payments {
+  margin-bottom: 2rem;
+}
+.footer-bottom-payments i {
+  color: #333;
+  cursor: pointer;
+  font-size: 3rem;
+  margin: 5px;
+  transition: 0.3s;
+}
+.footer-bottom-payments i:hover {
+  color: #d10024;
+}
 
 .btn {
   padding: 8px 15px;
