--- a/sass/2-layouts/_deal-section.sass
+++ b/sass/2-layouts/_deal-section.sass
@@ -11,3 +11,40 @@
     background-color: variables.$section-bg-color
     height: 400px
     padding: 2rem
+
+    &-content
+        height: 100%
+        flex-direction: column
+        align-items: center
+        @include layouts-mixins.center-content
+        justify-content: center
+
+        &-timer
+            display: flex
+            margin-bottom: 2rem
+
+        .deal-container-timer
+            width: 100px
+            height: 100px
+            border-radius: 50%
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: center
+            background-color: variables.$primary-color 
+            color: variables.$light-color
+            margin: 0 1rem
+
+            &-time
+                font-weight: bold
+                font-size: 1.5rem
+
+    
+        &-title, &-subtitle
+            margin-bottom: 1rem
+            text-transform: uppercase
+            font-size: 2rem
+
+        &-subtitle
+            margin-bottom: 2rem
+            font-size: 1.5rem
